# event-processor

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: docker-build.yml
src/: main.rs
src/buffer/: mod.rs
src/circuit_breaker/: mod.rs
src/config/: mod.rs
src/db/: mod.rs
src/dispatcher/: mod.rs
src/evaluators/: geofence.rs  ignition.rs  mod.rs
src/health/: mod.rs
src/kafka/: mod.rs
src/models/: event.rs  geofence.rs  geofence_update.rs  incoming_message.rs  mod.rs
src/processors/: event_processor.rs  mod.rs
src/serializers/: protobuf.rs  siscom.proto
src/unit_devices/: mod.rs
