[package]
name = "event-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["json"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
dotenvy = "0.15"
futures = "0.3"
rdkafka = { version = "0.36", features = ["cmake-build", "sasl", "ssl-vendored", "tokio", "tracing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["chrono", "json", "postgres", "runtime-tokio-rustls", "uuid"] }
thiserror = "2.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "net"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.10", features = ["serde", "v4", "v5"] }
async-trait = "0.1"
h3o = "0.9"
dashmap = "5.5"
